<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="tv_date" type="id"/>
    <item name="home_name" type="id" />
    <item name="home_skor" type="id" />
    <item name="away_name" type="id" />
    <item name="away_skor" type="id" />
    <item name="toolbar" type="id" />
    <item name="layout_container" type="id" />
    <item name="bottom_navigation" type="id" />
    <item name="recyclerView" type="id" />
    <item name="appBarlayout" type="id" />
    <item name="icon_splash" type="id" />
    <item name="linearmain" type="id" />
    <item name="home_logo" type="id" />
    <item name="away_logo" type="id" />
    <item name="home_score" type="id" />
    <item name="tv_match" type="id" />
    <item name="away_formation" type="id" />
    <item name="home_formation" type="id" />
    <item name="relative1" type="id" />
    <item name="goals" type="id" />
    <item name="shots" type="id" />
    <item name="goalkeeper" type="id" />
    <item name="lineups" type="id" />
    <item name="defense" type="id" />
    <item name="midfield" type="id" />
    <item name="forward" type="id" />
    <item name="away_goalkeeper" type="id" />
    <item name="home_goalkeeper" type="id" />
    <item name="home_defense" type="id" />
    <item name="away_defense" type="id" />
    <item name="home_goals" type="id" />
    <item name="away_goals" type="id" />
    <item name="home_shots" type="id" />
    <item name="away_shots" type="id" />
    <item name="home_midfield" type="id" />
    <item name="away_midfield" type="id" />
    <item name="home_forward" type="id" />
    <item name="away_forward" type="id" />
    <item name="home_substitues" type="id" />
    <item name="away_substitues" type="id" />
    <item name="swipeRefresh" type="id" />
    <item name="progress_bar" type="id" />
    <item name="line2" type="id" />
    <item name="team_badge" type="id" />
    <item name="team_name" type="id" />
    <item name="tablayout" type="id" />
    <item name="viewPager" type="id" />
    <item name="player_img" type="id" />
    <item name="player_name" type="id" />
    <item name="player_position" type="id" />
    <item name="spinner" type="id" />
    <item name="tv_time" type="id" />
    <item name="add_to_calender" type="id" />
    <item name="recyclerViewLast" type="id" />
    <item name="descTeam" type="id" />
    <item name="recyclerFavMatch" type="id" />
</resources>