<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/matchs"
        android:icon="@drawable/ic_trophy"
        android:title="Matchs"/>

    <item
        android:id="@+id/teams"
        android:icon="@drawable/ic_ball"
        android:title="Teams"/>

    <item
        android:id="@+id/favorite"
        android:icon="@drawable/ic_circle_favorite"
        android:title="Favorite"/>
</menu>